--- a/theme1.html
+++ b/theme1.html
@@ -76,7 +76,7 @@
       <!-- 本文カラム -->
            <div class="main-content"></div>
       <article>
-        <h1>◆ コードで遊ぶ30のお題</h1>
+        <h1>◆ コードで遊ぶ30のお題 #CCPcode30</h1>
         <p>クリエイティブコーディングのネタとして使える30のお題セットです。<br>技法・表現・アルゴリズムがテーマです。<br>好きな順番で使ったり、1日1個ずつ進めたり、ご自由にどうぞ。</p>
 <br>
 
