--- a/theme2.html
+++ b/theme2.html
@@ -76,7 +76,7 @@
       <!-- 本文エリア -->
          <div class="main-content"></div>
       <article>
-        <h1>◆ テーマで遊ぶ30のお題 #CCPtheme30</h1>
+        <h1>◆ テーマで遊ぶ30のお題 </h1><h3>#CCPtheme30</h3>
         <p>いろんなジャンルを横断する30題のお題セットです。<br>いろいろな題材・モチーフからイメージを膨らませてください！<br>好きな順番で使ったり、1日1個ずつ進めたり、ご自由にどうぞ。</p>
 <br>
         <ol class="theme-list">
