--- a/theme1.html
+++ b/theme1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>コードで遊ぶ30のお題</title>
+  <title>Theme1 - CreativeCoderさんに30のお題</title>
   <link rel="stylesheet" href="style.css" />
 
   <!-- お題リスト用のちょっとした追加スタイル（お好みで style.css に移動してOK） -->
