--- a/theme2.html
+++ b/theme2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>テーマで遊ぶ30のお題</title>
+  <title>Theme2 - CreativeCoderさんに30のお題</title>
   <link rel="stylesheet" href="style.css" />
 
   <!-- お題リスト用（必要であれば style.css へ移動OK） -->
