--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <p>---</p>
  <p>これはProcessing Advent Calender2025のために作られたサイトです。</p>
- <p>記事はこちらになります→</p>
+ <p>記事はこちらになります→ <a href= "https://senbaku.info/2025/12/10/adventcalender2025/">https://senbaku.info/2025/12/10/adventcalender2025/</a></p>
  <p>web1.0時代のお題配布サイトをイメージして制作しました。楽しんでいただければ幸いです。ぜひお題にもチャレンジしてみてください。</p>
 <p>2025.12/10</p>
       </article>
